# ppp

./: .gitignore
codec/: CMakeLists.txt  measurements.txt  run.sh
codec/image/: compression_stats.c  dct_flops.c  frame_encoding.c  frame_encoding.h  image_encoder.c  ocl_init.c  ocl_init.h  ppp_image.h  ppp_video.h  video_load.c  viewer.c
codec/ppp_pnm/: Makefile  ppp_pnm.c
codec/solution/: image_encoder_kernels.cl
gravity/: Makefile  README  gravity_simulation.c
playground/: bcast-geruest.c  first_openmp.c  multi.c
scalepgm/: README  benchmark.csv  benchmark.py  genhugepgm.c  scalepgm.c
scalepgm_Verena/: scale-mpi.c  scale-openmp.c  scale.c
scalepgm_marc/: Makefile  comp.c  pgm_conv.c
vcd/: Makefile  README  benchmark.py  distributed.csv  parallel.csv  sequential.csv  vcd.c
